--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "author": "Pabitra mallick",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "email-validator": "^2.0.4",
     "express": "^5.1.0",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "validator": "^13.15.0"
   }
 }
